[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clokwerk = "0.4.0"
tokio = { version = "1.28.0", features = ["full"] }
ctrlc = { version = "3.0", features = ["termination"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
async-trait = "0.1.68"
futures = "0.3.28"
chrono = "0.4.24"
once_cell = "1.17.1"
